@@ -13,8 +13,7 @@ from collections import namedtuple
 
 from bitarray._bitarray import (
     bitarray, decodetree, bits2bytes, _bitarray_reconstructor,
-    get_default_endian, _set_default_endian, _sysinfo,
-    BITARRAY_VERSION as __version__
+    get_default_endian, _sysinfo, BITARRAY_VERSION as __version__
 )
 
 __all__ = ['bitarray', 'frozenbitarray', 'decodetree', 'bits2bytes']
