@@ -162,7 +162,6 @@ __version__: str
 def bits2bytes(n: int) -> int: ...
 def get_default_endian() -> str: ...
 def test(verbosity: int = ...) -> TextTestResult: ...
-def _set_default_endian(endian: str) -> None: ...
 def _sysinfo(key: str) -> int: ...
 def _bitarray_reconstructor(cls: type,
                             buffer: bytes,
