@@ -16,9 +16,6 @@
 /* size used when reading / writing blocks from files (in bytes) */
 #define BLOCKSIZE  65536
 
-/* default bit-endianness */
-static int default_endian = ENDIAN_BIG;
-
 /* translation table - setup during module initialization */
 static char reverse_trans[256];
 
@@ -3117,7 +3114,7 @@ decodetree_todict(decodetreeobject *self)
     if ((dict = PyDict_New()) == NULL)
         return NULL;
 
-    prefix = newbitarrayobject(&Bitarray_Type, 0, default_endian);
+    prefix = newbitarrayobject(&Bitarray_Type, 0, ENDIAN_DEFAULT);
     if (prefix == NULL)
         goto error;
 
@@ -3603,10 +3600,8 @@ static PyMethodDef bitarray_methods[] = {
 static int
 endian_from_string(const char *str)
 {
-    assert(default_endian == ENDIAN_LITTLE || default_endian == ENDIAN_BIG);
-
     if (str == NULL)
-        return default_endian;
+        return ENDIAN_DEFAULT;
 
     if (strcmp(str, "little") == 0)
         return ENDIAN_LITTLE;
@@ -4129,39 +4124,13 @@ reconstructor(PyObject *module, PyObject *args)
 static PyObject *
 get_default_endian(PyObject *module)
 {
-    return PyUnicode_FromString(ENDIAN_STR(default_endian));
+    return PyUnicode_FromString(ENDIAN_STR(ENDIAN_DEFAULT));
 }
 
 PyDoc_STRVAR(get_default_endian_doc,
 "get_default_endian() -> str\n\
 \n\
-Return the default bit-endianness for new bitarray objects being created.\n\
-Unless `_set_default_endian('little')` was called, the default\n\
-bit-endianness is `big`.");
-
-
-static PyObject *
-set_default_endian(PyObject *module, PyObject *args)
-{
-    char *endian_str;
-    int t;
-
-    if (!PyArg_ParseTuple(args, "s:_set_default_endian", &endian_str))
-        return NULL;
-
-    /* As endian_from_string() might return -1, we have to store its value
-       in a temporary variable before setting default_endian. */
-    if ((t = endian_from_string(endian_str)) < 0)
-        return NULL;
-    default_endian = t;
-
-    Py_RETURN_NONE;
-}
-
-PyDoc_STRVAR(set_default_endian_doc,
-"_set_default_endian(endian, /)\n\
-\n\
-Set the default bit-endianness for new bitarray objects being created.");
+Return the default bit-endianness for new bitarray objects being created.");
 
 
 static PyObject *
@@ -4214,8 +4183,6 @@ static PyMethodDef module_functions[] = {
      reduce_doc},
     {"get_default_endian",  (PyCFunction) get_default_endian, METH_NOARGS,
      get_default_endian_doc},
-    {"_set_default_endian", (PyCFunction) set_default_endian, METH_VARARGS,
-     set_default_endian_doc},
     {"_sysinfo",            (PyCFunction) sysinfo,            METH_VARARGS,
      sysinfo_doc},
     {NULL,                  NULL}  /* sentinel */
